Fixed responsive hero spacing on mobile for design and development pages.

--- a/css/webdesign.css
+++ b/css/webdesign.css
@@ -1281,8 +1281,8 @@ footer {
 
     /*--- Why Us Styles ---*/
     #why-us {
-        padding-top: 40px;
-        margin-top: 10%;
+        padding-top: 50px;
+        margin-top: 20%;
     }
     #why-us .container-fluid {
         padding: 0 15px;
